<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/contactcard"
        android:layout_width="379dp"
        android:layout_height="300dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toTopOf="@id/buttoncard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="132dp"
            android:layout_height="70dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editMiddle"
            app:layout_constraintEnd_toStartOf="@+id/editFirst"
            app:layout_constraintStart_toStartOf="@+id/contactcard"
            app:layout_constraintTop_toTopOf="@+id/contactcard"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editFirst"
            android:layout_width="226dp"
            android:layout_height="70dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/fname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editLast"
            app:layout_constraintEnd_toEndOf="@+id/contactcard"
            app:layout_constraintStart_toEndOf="@id/editTitle"
            app:layout_constraintTop_toTopOf="@+id/contactcard" />

        <EditText
            android:id="@+id/editMiddle"
            android:layout_width="144dp"
            android:layout_height="70dp"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/mname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTaluka"
            app:layout_constraintEnd_toStartOf="@+id/editLast"
            app:layout_constraintStart_toStartOf="@+id/contactcard"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <EditText
            android:id="@+id/editLast"
            android:layout_width="226dp"
            android:layout_height="70dp"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editMobileno"
            app:layout_constraintEnd_toStartOf="@+id/contactcard"
            app:layout_constraintStart_toStartOf="@+id/editMiddle"
            app:layout_constraintTop_toBottomOf="@+id/editFirst" />

        <EditText
            android:id="@+id/editTaluka"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginTop="175dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/taluka"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/contactcard"
            app:layout_constraintEnd_toStartOf="@+id/editMobileno"
            app:layout_constraintStart_toStartOf="@+id/contactcard"
            app:layout_constraintTop_toBottomOf="@+id/editMiddle" />

        <EditText
            android:id="@+id/editMobileno"
            android:layout_width="226dp"
            android:layout_height="70dp"
            android:layout_marginStart="165dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/rollno"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/contactcard"
            app:layout_constraintEnd_toEndOf="@+id/contactcard"
            app:layout_constraintStart_toEndOf="@+id/editTaluka"
            app:layout_constraintTop_toBottomOf="@+id/editLast"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttoncard"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactcard">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="80dp"
            android:layout_height="73dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:text="@string/newtext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
            app:layout_constraintStart_toStartOf="@+id/buttoncard"
            app:layout_constraintTop_toTopOf="@+id/parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="80dp"
            android:layout_height="73dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:text="@string/searchtext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonModify"
            app:layout_constraintStart_toEndOf="@id/buttonAdd"
            app:layout_constraintTop_toTopOf="@+id/parent" />

        <Button
            android:id="@+id/buttonModify"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginStart="172dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:text="@string/updatetext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonDelete"
            app:layout_constraintStart_toEndOf="@id/buttonSearch"
            app:layout_constraintTop_toTopOf="@+id/parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginStart="266dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/deletetext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/parent"
            app:layout_constraintStart_toEndOf="@id/buttonModify"
            app:layout_constraintTop_toTopOf="@+id/parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
